<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/bg_wifi_items_cdview"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:contentPadding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvWifiStrengthTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:text="@string/wifi_strength"
                    android:textColor="@color/fg_wifiactive"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/tvWifidBmTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/decibel"
                    android:textColor="@color/fg_wifiactive"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/tvMacTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/mac_addr"
                    android:textColor="@color/fg_wifiactive"
                    android:textSize="10sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/progressBarLevel_dB"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:max="120"
                        android:min="0"
                        android:minWidth="110dp"
                        android:visibility="visible" />
                </TableRow>

                <TextView
                    android:id="@+id/tvNumLeveldB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/level"
                    android:textColor="@color/fg_wifiactive"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvMacAddr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/mac"
                    android:textColor="@color/fg_wifiactive"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvSsidTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ssid"
                        android:textColor="@color/fg_wifiactive"
                        android:textSize="10sp" />

                    <ImageView
                        android:id="@+id/ivPadLock"
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_marginStart="10dp" />
                </TableRow>

                <TextView
                    android:id="@+id/tvRouterTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_span="2"
                    android:text="@string/router_repeater_name"
                    android:textColor="@color/fg_wifiactive"
                    android:textSize="10sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvSsid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ssid"
                    android:textColor="@color/fg_wifiactive" />

                <TextView
                    android:id="@+id/tvRouter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_span="2"
                    android:text="@string/router"
                    android:textColor="@color/fg_wifiactive" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>